# emacs

./: build.sh  configure.ac  emacs.lisp
lisps/: linum.el  psvn.el
lisps/doxymacs-1.8.0/: Makefile  config.status
lisps/doxymacs-1.8.0/c/: Makefile  doxymacs_parser
lisps/doxymacs-1.8.0/c/.deps/: doxymacs_parser.Po
lisps/doxymacs-1.8.0/lisp/: Makefile  doxymacs.el  doxymacs.elc  doxymacs.el~  xml-parse.elc
lisps/doxymacs-1.8.0/no-autoconf/: Makefile
lisps/emacs-goodies-el-29.3/elisp/dpkg-dev-el/: debian-control-mode.el
my-lisps/: oceanbase.el  poponion-misc.el
