#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.68])
AC_INIT([emacs], [0.1], [huangcm85@gmail.com])
AM_INIT_AUTOMAKE(poponion, 1.4)
# Checks for programs.

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_FILES([Makefile
                 lisps/Makefile
                 my-lisps/Makefile])
AC_OUTPUT
